namespace Uno;

public interface IPlayer
{
  public string GetName();
  public void SetName(string name);
}